updates for naive GEP

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -11,7 +11,17 @@ AM_CXXFLAGS=
 AM_CPPFLAGS=
 AM_CFLAGS=
 
-bin_PROGRAMS = mult-seq mult-omp mult-tbb mult-pthrd mult-kaapi elim-seq elim-omp
+bin_PROGRAMS = 	\
+	mult-seq 			\
+	mult-omp 			\
+	mult-tbb 			\
+	mult-pthrd	 	\
+	mult-kaapi 		\
+	elim-seq	 		\
+	elim-omp 			\
+	elim-kaapi		\
+	elim-pthrd		\
+	elim-tbb
 
 mult_seq_CFLAGS= -O3 -funroll-loops -fvisibility=hidden -mmmx -msse -msse2 -msse3 -msse4.1 -msse4.2 -mavx
 mult_seq_SOURCES= 	\
@@ -34,12 +44,19 @@ mult_tbb_CPPFLAGS= -O3 -funroll-loops -fvisibility=hidden -std=c++0x -mmmx -msse
 mult_tbb_LDADD= -ltbb
 mult_tbb_SOURCES= 	\
 	mat-mult-tbb.cpp
+elim_tbb_CPPFLAGS= -O3 -funroll-loops -fvisibility=hidden -std=c++0x -mmmx -msse -msse2 -msse3 -msse4.1 -msse4.2 -mavx
+elim_tbb_LDADD= -ltbb
+elim_tbb_SOURCES= 	\
+	mat-elim-tbb.cpp
 endif
 
 if ENABLE_PTHRD
 mult_pthrd_CFLAGS= -O3 -funroll-loops -fvisibility=hidden -mmmx -msse -msse2 -msse3 -msse4.1 -msse4.2 -mavx -pthread
 mult_pthrd_SOURCES= 	\
 	mat-mult-pthrd.c
+elim_pthrd_CFLAGS= -O3 -funroll-loops -fvisibility=hidden -mmmx -msse -msse2 -msse3 -msse4.1 -msse4.2 -mavx -pthread
+elim_pthrd_SOURCES= 	\
+	mat-elim-pthrd.c
 endif
 
 if ENABLE_KAAPIC
@@ -47,6 +64,10 @@ mult_kaapi_CFLAGS= -O3 -funroll-loops -fvisibility=hidden -mmmx -msse -msse2 -ms
 mult_tbb_LDADD= -lkaapic
 mult_kaapi_SOURCES= 	\
 	mat-mult-kaapi.c
+elim_kaapi_CFLAGS= -O3 -funroll-loops -fvisibility=hidden -mmmx -msse -msse2 -msse3 -msse4.1 -msse4.2 -mavx -lkaapic
+elim_tbb_LDADD= -lkaapic
+elim_kaapi_SOURCES= 	\
+	mat-elim-kaapi.c
 endif
 CLEANFILES=	
 
