adds very first version of starpu mat mult: tiling is not correct at the moment

--- a/.gitignore
+++ b/.gitignore
@@ -64,11 +64,13 @@ mult-omp
 mult-tbb
 mult-kaapi
 mult-pthrd
+mult-starpu
 elim-seq
 elim-omp
 elim-tbb
 elim-kaapi
 elim-pthrd
+elim-starpu
 tests/test*
 !tests/unit/Makefile.am
 !tests/unit/*.c
